# tt-matchmaker

./: Dockerfile  README.md  pyproject.toml  simple_players_input.json  squad_players_input.json  test_matchmaker.py  waitlist_squad_players_input.json
app/: main.py
app/config/: settings.py
app/enums/: common.py
app/models/: app_settings.py  healthcheck.py
app/models/common/: match.py  player.py  simple_matchmaking.py  team.py
app/models/request/: player_input.py  simple_matchmaking_input.py
app/models/response/: match_output.py  player_output.py  simple_matchmaking_output.py
app/routers/: health_check.py  matchmaking.py  root.py
app/services/matchmaking/: base.py  simple.py  squad.py  waitlist_squad.py
app/storage/: players_db.py
