[project]
name = "tt-matchmaker"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = "==3.11.*"
dependencies = [
    "fastapi>=0.119.0",
    "pydantic-settings>=2.11.0",
    "pydantic>=2.12.2",
    "uvicorn>=0.38.0",
]

[tool.ruff]
line-length = 120

[tool.ruff.format]
line-ending = "auto"
